--- a/test/index.html
+++ b/test/index.html
@@ -1,14 +1,55 @@
 <!DOCTYPE html>
 
-<html>
-    <head>
-        <title>
-            UX - U = X
-        </title>
-    </head>
-    <body>
-        <h1>
-            UX - U = X
-        </h1>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Hello</title>
+
+    <link rel="stylesheet" href="index.css">
+  </head>
+
+  <body>
+    <header class="header">
+      This is my header
+      <nav>
+        <ul>
+          <li>
+            Home
+          </li>
+          <li>
+            <a class="action-link"
+              href="section-two.html"
+              title="About Me">About Me</a>
+          </li>
+          <li>
+            <a class="action-link"
+              href="https://github.com/jeshals/html-css-js-training"
+              target="_blank"
+              title="My Repo">
+              My Repo
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <section id="section-one">
+      <h1>
+        Hello <span>I am a span inside h1</span>
+      </h1>
+      <h2>I am h2</h2>
+      <h3>I am h3</h3>
+      <p>I am a paragraph</p>
+    </section>
+
+    <aside class="the-only-aside">
+      This is my aside.
+    </aside>
+
+    <!-- This is commenting -->
+
+    <footer class="footer">
+      This is my footer
+    </footer>
+  </body>
 </html>
