--- a/test/index.html
+++ b/test/index.html
@@ -5,7 +5,15 @@
     <meta charset="utf-8">
     <title>Hello</title>
 
+    <!-- External style example -->
     <link rel="stylesheet" href="index.css">
+
+    <!-- Internal style example -->
+    <!-- <style media="screen">
+      body {
+        background-color: yellow;
+      }
+    </style> -->
   </head>
 
   <body>
@@ -33,13 +41,26 @@
       </nav>
     </header>
 
-    <section id="section-one">
+    <section class="section-one">
       <h1>
-        Hello <span>I am a span inside h1</span>
+        Hello <span>I am a span inside h1</span> <span>I am another span inside h1</span>
       </h1>
       <h2>I am h2</h2>
       <h3>I am h3</h3>
-      <p>I am a paragraph</p>
+      <p class="para-in-odd para-highlighted">I am a paragraph 1</p>
+      <p class="para-in-even">I am a paragraph 2</p>
+      <p class="para-in-odd">I am a paragraph 3</p>
+      <p class="para-even para-highlighted">I am a paragraph 4</p>
+      <p class="para-in-odd">I am a paragraph 5</p>
+      <span>
+        I am a span
+      </span>
+      <span>
+        I am a span
+      </span>
+      <span>
+        I am a span
+      </span>
     </section>
 
     <aside class="the-only-aside">
