--- a/day 1/index.html
+++ b/day 1/index.html
@@ -6,11 +6,11 @@
 
     <title>Home</title>
 
-    <!-- External style example -->
+    <!-- External style example - recommended -->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="common.css">
 
-    <!-- Internal style example -->
+    <!-- Internal style example - not recommended-->
     <!-- <style media="screen">
       body {
         background-color: yellow;
@@ -55,7 +55,7 @@
       <p class="para-in-even">I am a paragraph 2</p>
       <p class="para-in-odd">I am a paragraph 3</p>
       <p class="para-even para-highlighted">I am a paragraph 4</p>
-      <p class="para-in-odd">I am a paragraph 5</p>
+      <p class="para-in-odd-last">I am a paragraph 5</p>
       <span>
         I am a span
       </span>
@@ -65,7 +65,29 @@
       <span>
         I am a span
       </span>
+      <div>
+        I am a div after span
+      </div>
+      <article id="more-universal-lists" class="universal-list">
+        More about me:
+
+        <ul>
+          <li>
+            ABC
+          </li>
+          <li>
+            DEF
+          </li>
+          <li>
+            GHI
+          </li>
+        </ul>
+      </article>
     </section>
+
+    <br>
+
+    <hr class="custom-hr">
 
     <aside class="the-only-aside">
       This is my aside.
