--- a/day 1/section-two.html
+++ b/day 1/section-two.html
@@ -33,6 +33,7 @@
               href="section-two.html"
               title="About Me">About Me</a>
           </li>
+          <!-- Use target="_blank" to open link in new tab -->
           <li>
             <a class="action-link"
               href="https://github.com/jeshals/html-css-js-training"
@@ -64,6 +65,18 @@
             </li>
             <li>
               I have a little experience with HTML, CSS, JS.
+            </li>
+            <li>
+              Languages known:
+
+              <ul>
+                <li>
+                  English
+                </li>
+                <li>
+                  Hindi
+                </li>
+              </ul>
             </li>
           </ul>
         </article>
