--- a/day 1/section-two.html
+++ b/day 1/section-two.html
@@ -6,11 +6,12 @@
 
     <title>About Me</title>
 
-    <!-- External style example -->
+    <!-- External style example - recommended -->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="section-two.css">
 
-    <!-- Internal style example -->
+    <!-- Internal style example - not recommended-->
     <!-- <style media="screen">
       body {
         background-color: yellow;
@@ -40,6 +41,14 @@
               target="_blank"
               title="My Repo">
               My Repo
+            </a>
+          </li>
+
+          <li>
+            <a class="action-link"
+              href="css-box-model.html"
+              title="Box Model">
+              Box Model
             </a>
           </li>
         </ul>
