--- a/day 1/css-box-model.html
+++ b/day 1/css-box-model.html
@@ -4,12 +4,11 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Home</title>
+    <title>About Me</title>
 
     <!-- External style example - recommended -->
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="section-one.css">
+    <link rel="stylesheet" href="css-box-model.css">
 
     <!-- Internal style example - not recommended-->
     <!-- <style media="screen">
@@ -34,6 +33,7 @@
               href="section-two.html"
               title="About Me">About Me</a>
           </li>
+          <!-- Use target="_blank" to open link in new tab -->
           <li>
             <a class="action-link"
               href="https://github.com/jeshals/html-css-js-training"
@@ -54,53 +54,32 @@
       </nav>
     </header>
 
-    <section id="section-one">
+    <section id="css-box-model">
       <h1>
-        Hello <span>I am a span inside h1</span> <span>I am another span inside h1</span>
+        Box Model
       </h1>
-      <h2>I am h2</h2>
-      <h3>I am h3</h3>
-      <p class="para-in-odd para-highlighted">I am a paragraph 1</p>
-      <p class="para-in-even">I am a paragraph 2</p>
-      <p class="para-in-odd">I am a paragraph 3</p>
-      <p class="para-even para-highlighted">I am a paragraph 4</p>
-      <p class="para-in-odd-last">I am a paragraph 5</p>
-      <span>
-        I am a span
-      </span>
-      <span>
-        I am a span
-      </span>
-      <span>
-        I am a span
-      </span>
-      <div>
-        I am a div after span
+
+      <div id="box">
+        <div id="content">
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+        </div>
       </div>
-      <article id="more-universal-lists" class="universal-list">
-        More about me:
 
-        <ul>
-          <li>
-            ABC
-          </li>
-          <li>
-            DEF
-          </li>
-          <li>
-            GHI
-          </li>
-        </ul>
-      </article>
+      <div id="box">
+        <div id="content">
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+          Lorem ipsum dolor sit amet, consecteur adipisicing elit.
+        </div>
+      </div>
     </section>
-
-    <br>
-
-    <hr class="custom-hr">
-
-    <aside class="the-only-aside">
-      This is my aside.
-    </aside>
 
     <footer class="footer">
       This is my footer
