--- a/day 3 working/index.html
+++ b/day 3 working/index.html
@@ -4,10 +4,16 @@
   <head>
     <meta charset="utf-8">
 
-    <title>David Chu's China Bistro</title>
+    <title>Read on!</title>
   </head>
   <body>
+    <ul>
+      <li>
+        <a href="https://jsfiddle.net/53ojp2ae/14/">JS Fiddle</a>
+      </li>
+      <li>
+        <a href="https://freshman.tech/todo-list/">HTML/CSS/JS Practice Project</a>
+      </li>
+    </ul>
   </body>
-
-  <script src="js/script.js"></script>
 </html>
